--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.scellecs.morpeh": "https://github.com/scellecs/morpeh.git",
+    "com.scellecs.morpeh": "file:E:/downloads/morpeh-main/morpeh-main",
     "com.unity.collab-proxy": "1.17.7",
     "com.unity.feature.development": "1.0.1",
     "com.unity.ide.rider": "3.0.16",
